--- a/smt-server/pom.xml
+++ b/smt-server/pom.xml
@@ -44,6 +44,12 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-cache</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <version>4.5.3</version>
+    </dependency>
     <!--External Dependencies-->
   </dependencies>
 </project>
