--- a/smt-server/src/main/resources/application.yml
+++ b/smt-server/src/main/resources/application.yml
@@ -16,6 +16,8 @@ spring:
     dataSourceClassName: org.apache.commons.dbcp.BasicDataSource
     driverClassName: org.postgresql.Driver
     url: jdbc:postgresql://localhost:5432/smt?currentSchema=public
+    #postgres     root
+    #smt          smt
     username: postgres
     password: root
     testWhileIdle: true
