--- a/smt-server/pom.xml
+++ b/smt-server/pom.xml
@@ -64,6 +64,12 @@
       <artifactId>javax.mail</artifactId>
       <version>1.5.5</version>
     </dependency>
+
+    <dependency>
+      <groupId>net.spy</groupId>
+      <artifactId>spymemcached</artifactId>
+      <version>2.12.3</version>
+    </dependency>
     <!--External Dependencies-->
   </dependencies>
 
